# yatt

./: '  .gitignore  .pre-commit-config.yaml  Cargo.toml  README.md  example.txt  expand.rs  fixme  otput.rs  rustfmt.toml  test.rs
cli/: Cargo.toml
cli/src/: command.rs  errors.rs  format.rs  lib.rs  parse.rs  print.rs  report.rs  style.rs
cli/src/commands/: mod.rs  restart.rs  root.rs  start.rs  state.rs  stop.rs
cli/src/commands/reports/: root.rs
cmd/: Cargo.toml
core/: Cargo.toml
core/src/: lib.rs
orm/: Cargo.toml
orm/orm_derive/: Cargo.toml
orm/orm_derive/src/: lib.rs
orm/src/: errors.rs  filter.rs  lib.rs  statement.rs
shell/: yatt-del  yatt-id  yatt-remove  yatt-rename  yatt-restart  yatt-tag  yatt-untag
src/: base16.rs  core.rs  errors.rs  format.rs  history.rs  lib.rs  main.rs  parse.rs  print.rs  report.rs  style.rs
src/commands/: add.rs  cancel.rs  merge.rs  mod.rs  rename.rs  restart.rs  root.rs  start.rs  state.rs  stop.rs  tag.rs  truncate.rs  untag.rs
src/commands/delete/: interval.rs  mod.rs  root.rs  task.rs
src/commands/list/: intervals.rs  mod.rs  root.rs  tasks.rs
src/commands/move/: mod.rs  task.rs
src/commands/reports/: mod.rs  root.rs  total.rs
src/commands/themes/: default.rs  list.rs  mod.rs  set.rs
src/commands/themes/base16/: import.rs  list.rs  mod.rs
src/history_storage/: sqlite.rs
src/storage/: sqlite.rs
storage/sqlite/: Cargo.toml
storage/sqlite/src/: lib.rs
yatt_core/: Cargo.toml
yatt_core/src/: core.rs  lib.rs  print.rs
yatt_core/src/commands/: state.rs
yatt_core/src/commands/list/: tasks.rs
yatt_core/src/commands/reports/: mod.rs
yatt_orm/: Cargo.toml
yatt_orm/src/: errors.rs  lib.rs  sqlite.rs  statement.rs
yatt_orm/yatt_orm_derive/: Cargo.toml
yatt_orm/yatt_orm_derive/src/: lib.rs
