[package]
name = "yatt"
version = "0.6.0"
authors = ["dinAlt <dinalt2@gmail.com>"]
edition = "2018"
description = "Yet Another Task Tracker"
license = "MIT"
repository = "https://github.com/dinAlt/yatt"

[dependencies]
clap = "2.33"
lazy_static = "1.4"
regex = "1.2"
custom_error = "1.7"
termimad = "0.6"
config = "0.9"
serde = "1.0"
dirs = "2.0"
serde_derive = "1.0"
chrono = "0.4.7"
crossterm_style = "=0.3.3"
crossterm_input = "0.3"
uuid = {version = "0.8", features = ["serde", "v4"]}
trees = "0.3"
yatt_orm = { version="0.3", path = "yatt_orm" }

[dependencies.rusqlite]
version = "0.20"
default-features = false

features = ["chrono", "bundled"]
[workspace]
members = [
  "yatt_orm",
  "yatt_orm/yatt_orm_derive",
]

[profile.dev]
incremental = true

[profile.release]
opt-level = "s"
lto = true
panic = "abort"
codegen-units = 4


