[package]
authors = ["dinAlt <dinalt2@gmail.com>"]
categories = ["command-line-utilities"]
description = "Yet Another Task Tracker"
edition = "2021"
license = "MIT"
name = "yatt"
repository = "https://github.com/dinAlt/yatt"
version = "0.11.1"

[dependencies]
chrono = "0.4.7"
clap = "2.33"
config = "0.9"
crossterm = "0.22.1"
crossterm_input = "0.5"
custom_error = "1.7"
dirs = "2.0"
lazy_static = "1.4"
regex = "1.2"
rusqlite = {version = "0.27.0", default-features = false, features = ["chrono", "bundled"]}
serde = "1.0"
serde_derive = "1.0"
termimad = "0.20.1"
trees = "0.3"
uuid = {version = "0.8", features = ["serde", "v4"]}
yatt_orm = {version = "0.5.1", path = "yatt_orm"}
semver = "1.0.7"

[workspace]
members = [
  "yatt_orm",
  "yatt_orm/yatt_orm_derive",
]

[profile.dev]
incremental = true

[profile.release]
codegen-units = 4
lto = true
opt-level = "s"
panic = "abort"
