[package]
name = "cli"
version = "0.1.0"
authors = ["dinAlt <dinalt2@gmail.com>"]
edition = "2018"
description = "test"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4"
regex = "1.2"
custom_error = "1.7"
termimad = "0.6"
clap = "2.33"
config = "0.9"
serde = "1.0"
dirs = "2.0"
serde_derive = "1.0"
chrono = "0.4.7"
crossterm_style = "=0.3.3"
core = { path = "../core" }
sqlite = { path = "../storage/sqlite" }
orm = { path = "../orm" }
