[package]
name = "yatt_orm"
version = "0.5.0"
authors = ["dinAlt <dinalt2@gmail.com>"]
edition = "2021"
license = "MIT"
description = "Yatt orm"
repository = "https://github.com/dinAlt/yatt/tree/master/yatt_orm"

[dependencies]
chrono = "0.4.7"
custom_error = "1.7"
yatt_orm_derive = { version = "0.3", path = "yatt_orm_derive" }
uuid = {version = "0.8", features = ["serde", "v4"]}

[dependencies.rusqlite]
version = "0.27.0"
default-features = false
features = ["chrono", "bundled"]
