[package]
name = "sqlite"
version = "0.1.0"
authors = ["dinAlt <dinalt2@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
core = { path = "../../core" }
orm = { path = "../../orm" }
chrono = "0.4.7"

[dependencies.rusqlite]
version = "0.20.0"
default-features = false

features = ["chrono", "bundled"]
