[package]
name = "yatt_orm_derive"
version = "0.2.1"
authors = ["dinAlt <dinalt2@gmail.com>"]
edition = "2018"
license = "MIT"
description = "Yet Another Task Tracker"
repository = "https://github.com/dinAlt/yatt/tree/master/yatt_orm/yatt_orm_derive"

[lib]
proc-macro = true

[dependencies]
syn = "1.0"
quote = "1.0"
proc-macro2 = { version = "1.0", default-features = false }

[features]
default = ["proc-macro"]
proc-macro = ["proc-macro2/proc-macro"]
